--- a/JololJan.html
+++ b/JololJan.html
@@ -8,5 +8,6 @@
 <body>
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.82/build/spline-viewer.js"></script>
 <spline-viewer url="https://prod.spline.design/RQu34O2dSYSuZzwL/scene.splinecode"></spline-viewer>
+<img src="firsttry.spline">
 </body>
 </html>
